@@ -1,12 +1,21 @@
 package metro;
 
-import java.nio.file.Path;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 @SuppressWarnings("squid:S106")
 public class Main {
-    public static void main(String[] args) {
-        final var file = Path.of(args[0]);
+    public static void main(String[] args) throws IOException {
+        final var path = Paths.get(args[0]);
 
-        System.out.println(file.getFileName());
+        if (Files.notExists(path)) {
+            System.out.println("Error! Such a file doesn't exist!");
+            return;
+        }
+        final var metroLine = new MetroMap(Files.readAllLines(path));
+        final var printer = new Printer();
+        printer.printMetroLine(metroLine.getLine());
     }
+
 }
